# alun

./: .gitignore  Cargo.toml  README.md
alun/: Cargo.toml  README.md
alun-cache/: Cargo.toml  README.md
alun-cache/src/: lib.rs
alun-config/: Cargo.toml  README.md
alun-config/src/: env.rs  lib.rs
alun-core/: Cargo.toml  README.md
alun-core/src/: api.rs  error.rs  lib.rs  plugin.rs
alun-db/: Cargo.toml  README.md
alun-db/src/: db.rs  dialect.rs  factory.rs  hook.rs  idkind.rs  lib.rs  migrate.rs  row.rs  sql.rs  tx.rs
alun-fs/: Cargo.toml  README.md
alun-fs/src/: backend.rs  lib.rs  local.rs  minio.rs  plugin.rs  registry.rs  types.rs
alun-kafka/: Cargo.toml  README.md
alun-kafka/src/: consumer.rs  lib.rs  plugin.rs  producer.rs
alun-log/: Cargo.toml  README.md
alun-log/src/: lib.rs
alun-macros/: Cargo.toml  README.md
alun-macros/src/: lib.rs  plugin.rs  route.rs  task_handler.rs
alun-plugin/: Cargo.toml  README.md
alun-plugin/src/: async_task.rs  cache_plugin.rs  lib.rs  notification.rs  scheduler.rs  serial_plugin.rs  sid_plugin.rs
alun-task/: Cargo.toml  README.md
alun-task/src/: handler.rs  lib.rs  metrics.rs  plugin.rs  producer.rs  registry.rs  retry.rs  storage.rs  types.rs  worker.rs
alun-template/: Cargo.toml  README.md
alun-template/src/: lib.rs
alun-utils/: Cargo.toml  README.md
alun-utils/src/: crypto.rs  date.rs  export.rs  lib.rs  mask.rs  serial.rs  sid.rs  str.rs  ua.rs  valid.rs  web.rs  xss.rs
alun-web/: Cargo.toml  README.md
alun-web/src/: app.rs  extract.rs  jwt.rs  lib.rs  resources.rs  response.rs  router.rs
alun-web/src/middleware/: auth.rs  idempotency.rs  mod.rs  nonce.rs  permission.rs  permission_check.rs  rate_limit.rs  request_id.rs  request_log.rs  role.rs  security_headers.rs
alun/src/: lib.rs
docs/: 01-architecture.md  02-crates-reference.md  03-dependencies.md  04-getting-started.md  05-fullstack-tech-stack.md  Alun框架推荐项目架构.md  README.md
examples/00-quick-start/: Cargo.toml
examples/00-quick-start/src/: main.rs
examples/01-basic/: Cargo.toml  main.rs
examples/01-basic/config/: config.toml
examples/02-auth/: Cargo.toml  main.rs
examples/03-db-crud/: Cargo.toml  main.rs
examples/04-test-suite/: Cargo.toml  TEST_REPORT.md
examples/04-test-suite/src/: main.rs
examples/04-test-suite/src/functional/: cache_tests.rs  config_tests.rs  core_tests.rs  fs_tests.rs  middleware_tests.rs  mod.rs  plugin_tests.rs  template_tests.rs  utils_tests.rs  web_tests.rs
examples/04-test-suite/src/scenarios/: middleware_scenarios.rs  mod.rs  plugin_scenarios.rs  real_world_tests.rs
examples/04-test-suite/src/security/: mod.rs  vulnerability_tests.rs
examples/04-test-suite/src/stress/: mod.rs  stress_tests.rs
skill-alun/: SKILL.md
skill-alun/references/: auth.md  config.md  database.md  plugins.md  routing.md  task.md  utils.md
