[package]
name = "alun-core"
description = "Alun framework core: app lifecycle, plugin system, error handling, unified response types"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alun-core"
readme = "README.md"
rust-version.workspace = true
keywords = ["web", "framework", "core", "plugin", "error-handling"]
categories = ["web-programming"]

[dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, optional = true }

[features]
default = []
web = ["axum"]
