[package]
name = "alun-db"
description = "Alun database: Row-based CRUD, transactions, hooks, SQL templates, migrations"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alun-db"
readme = "README.md"
rust-version.workspace = true
keywords = ["database", "sqlx", "crud", "orm", "postgresql", "mysql", "sqlite"]
categories = ["database", "database-implementations", "web-programming"]

[dependencies]
alun-core = { workspace = true }
alun-config = { workspace = true }
alun-utils = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
parking_lot = { workspace = true }
dashmap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
regex = "1"
paste = "1"
