[package]
name = "alun-fs"
description = "Alun file system abstraction: local file storage and multi-backend support (MinIO/S3)"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alun-fs"
readme = "README.md"
rust-version.workspace = true
keywords = ["filesystem", "storage", "s3", "minio", "web"]
categories = ["filesystem", "web-programming"]

[features]
default = ["local"]
local = []
minio = ["dep:aws-sdk-s3", "dep:aws-config", "dep:http"]

[dependencies]
alun-core = { workspace = true }
alun-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
linkme = { workspace = true }

aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
http = { workspace = true, optional = true }