[package]
name = "alun-template"
description = "Alun template engine abstraction: minijinja (Jinja2) and askama support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alun-template"
readme = "README.md"
rust-version.workspace = true
keywords = ["template", "jinja2", "minijinja", "askama", "web", "framework"]
categories = ["web-programming", "template-engine"]

[dependencies]
alun-core = { workspace = true }
minijinja = { workspace = true }
askama = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
