[package]
name = "alun-utils"
description = "Alun utilities: string manipulation, date handling, masking, ID generation, validation, crypto, web helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/alun-utils"
readme = "README.md"
rust-version.workspace = true
keywords = ["utilities", "validation", "crypto", "uuid", "date"]
categories = ["utilities", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
regex = "1"
url = "2"
uuid = { version = "1", features = ["v4", "v7"] }
validator = { workspace = true, optional = true }
ammonia = { version = "4", optional = true }
csv = "1.3"
alun-core = { workspace = true }
http = { workspace = true }

[features]
default = []
validator-integration = ["validator"]
xss = ["ammonia"]
