[package]
name = "quick-start"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
alun = { path = "../../alun", features = ["full"] }
alun-utils = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
