[package]
name = "example-db-crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alun = { path = "../../alun", features = ["full"] }
alun-utils = { path = "../../alun-utils" }
tokio = { workspace = true }
serde_json = { workspace = true }
linkme = { workspace = true }
axum = { workspace = true }

[[bin]]
name = "db-crud"
path = "main.rs"
